[package]
name = "shortlist"
version = "0.2.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "An efficient data structure to track the largest items pushed to it."
repository = "https://github.com/kneasle/shortlist"
readme = "README.md"
license = "MIT"
keywords = ["collection", "heap", "ranking"]
categories = ["algorithms", "data-structures"]
edition = "2018"

[dev-dependencies]
rand = "0.7.3"
